--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
+    "server": "file:..",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
