--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node prisma/seed.ts",
     "build": "npm install && npm install --prefix client && npm run build --prefix client && rimraf dist && npx tsc",
-    "start": "node server/index.js",
+    "start": "tsx watch server/src/index.ts",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node server/src/index.ts\""
   },
   "keywords": [],
@@ -33,6 +34,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.4.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.5.4"
   }
 }
